src/objects/NA_Housing__c.object
<CustomObject>
    <description>Needs Assessment Section - Housing</description>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <inlineHelpText>If own, what is your current balance?</inlineHelpText>
        <label>Current Balance</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Lender__c</fullName>
        <inlineHelpText>If own, who is your current mortgage lender?</inlineHelpText>
        <label>Current Lender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Asked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined to Answer</fullName>
                </value>
                <value>
                    <fullName>Lender A</fullName>
                </value>
                <value>
                    <fullName>Lender B</fullName>
                </value>
                <value>
                    <fullName>Lender C</fullName>
                </value>
                <value>
                    <fullName>Lender D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <inlineHelpText>If own, what is your current rate?</inlineHelpText>
        <label>Current Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>If own, what is the end date of the mortgage?</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_Realtor__c</fullName>
        <inlineHelpText>If planning to purchase a house, do you have a realtor?</inlineHelpText>
        <label>Have Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Asked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined to Answer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <label>NA</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipName>Needs_Assessment_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Planning_to_Purchase__c</fullName>
        <inlineHelpText>Are you planning to purchase a house?</inlineHelpText>
        <label>Planning to Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Asked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined to Answer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_or_Own__c</fullName>
        <inlineHelpText>D you own or rent your home?</inlineHelpText>
        <label>Rent or Own</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Asked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined To Answer</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicator to show disposition of the section as new(no questions answered), partial (some questions answered) or complete(all questions answered)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>When_Purchase__c</fullName>
        <inlineHelpText>If planning to purchase a house, when?</inlineHelpText>
        <label>When Purchase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rec1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section Recommendation</description>
        <label>rec1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rec2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section Recommendation</description>
        <label>rec2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rec3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section Recommendation</description>
        <label>rec3</label>
        <type>Checkbox</type>
    </fields>
    <label>NA Life Events Housing</label>
    <nameField>
        <displayFormat>NAS01{000000000}</displayFormat>
        <label>Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NA Life Events Housing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>